--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {
 	margin: 0;
 	padding: 0;
-	border: 0;
+	/* border: 0; */
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
@@ -49,6 +49,7 @@ table {
 
 * {
     box-sizing: border-box;
+    border: 1px solid red;
 }
 
 html, body {
@@ -64,6 +65,28 @@ h1, h2, h3, h4, h5 {
 
 p {
     line-height: 1.4;
+}
+
+header {
+    display: flex;
+    width: 800px;
+    margin: 0 auto;
+}
+
+header .logo {
+    width: 200px;
+}
+
+header nav {
+    width: 600px;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-end;
+}
+
+header nav a {
+    text-decoration: none;
+
 }
 
 .container {
