--- a/css/index.css
+++ b/css/index.css
@@ -49,7 +49,7 @@ table {
 
 * {
     box-sizing: border-box;
-    /* border: 1px solid red; */
+    border: 1px solid red;
 }
 
 html, body {
@@ -66,6 +66,8 @@ h1, h2, h3, h4, h5 {
 p {
     line-height: 1.4;
 }
+
+/* Header Styling */
 
 header {
     display: flex;
@@ -141,6 +143,8 @@ header nav a {
     justify-content: center;
 }
 
+/* Box Color Styling */
+
 .middle-content .boxes .box:nth-child(1) {
     background-color: teal;
 }
@@ -213,3 +217,6 @@ footer nav a {
     color: white;
     text-decoration: none;
 }
+
+/* About Page Styling */
+
