--- a/css/index.css
+++ b/css/index.css
@@ -49,7 +49,7 @@ table {
 
 * {
     box-sizing: border-box;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 html, body {
@@ -220,3 +220,26 @@ footer nav a {
 
 /* About Page Styling */
 
+.about-banner {
+    width: 800px;
+    margin: 0 auto;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+
+.about-top {
+    width: 800px;
+    margin: 0 auto;
+    padding-bottom: 20px;
+    border-bottom: 1px dashed black;
+    margin-bottom: 30px;
+}
+
+.about-top h2 {
+    margin-left: 10px;
+}
+
+.about-top p {
+    margin-left: 10px;
+    margin-right: 10px;
+}
